welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: not found: value k
		setCouleurBrosse(tab(k-1))
                                     ^Array1:22: error: not found: value k
		setCouleurBrosse(k)
                                 ^