welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var tab = new Array[Color] (getMondeHauteur())
	
	for (i <- 0 to getMondeHauteur()-1)
	{
		tab(i) == getCouleurSol()
		avance()

	}
	
			
	{ for (k<- 0 to getMondeLargeur()-1)
		gauche()
		avance()
		droite()
		avance()
		for (j<- 0 to getMondeLargeur()-1) {
		setCouleurBrosse(tab(k-1))
		baisseBrosse()
		leveBrosse()
		setCouleurBrosse(k)
	}
	}
	
}
